src/test/deca/context/invalid/created/unknown_variable.deca
//Un programme avec une variable non initialisée

{
int b = 4;

//doit être refusé
a = b;
}